# me

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  Makefile  README.md  SUPERMEMORY_SETUP.md  alembic.ini  deploy-landing-cloudflare-pages.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
Plans/: Personal Memory Layer Options.md
Plans/phases/: 00-python-env.md  01-postgres-docker-and-fastapi-init.md  02-database-fastapi-integration.md  03-data-models.md  04-auth-endpoints.md  05-memory-endpoints.md  06-chat-capture.md  07-chat-recall.md  08-chat-reminder.md  09-chat-image-attach.md  10-chat-meta-and-profile.md  11-memory-pipeline-extraction.md  12-memory-pipeline-consolidation.md  13-standing-user-profile.md  14-supabase-prod-migration.md  15-deployment-fly-io.md  16-mobile-stub.md
app/: cli.py  main.py
app/agents/: __init__.py  context.py  emitter.py  instructions.py  packets.py  runtime.py  sse.py
app/api/: _chat_stream.py  auth.py  chat.py  memories.py  sessions.py
app/core/: config.py  deps.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  auth_throttle.py  memory.py  message.py  session.py  user.py
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  env.example
docker/: docker-compose.yml
landing_page/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  _headers  brand-spec.md  index.html  landing.html
migrations/: env.py
mobile/: .env.example  app.json  metro.config.js  package.json  tailwind.config.js  theme.js  vitest.config.ts
tests/: _db.py  _memory.py  _memory_client_fake.py  conftest.py  test_smoke.py
(+123 files in other folders)
