[project]
name = "byte-journal"
version = "0.0.0"
description = "Single-user chat-first journaling app with a memory layer"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ty.src]
include = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
