[project]
name = "me"
version = "0.0.0"
description = "Single-user chat-first journaling app with a memory layer"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "fastapi",
    "openai-agents>=0.17",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "supermemory>=3.39.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "pre-commit",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.1",
    "pytest-httpx>=0.36.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ty.src]
include = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
